--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,9 @@
 name = "mupdf"
 version = "0.1.0"
 authors = ["Lucas Stadler <lu@papill0n.org>"]
+
+[dependencies]
+libc = "0.1.*"
+
+[build-dependencies]
+gcc = "0.3.*"
